--- a/lines/index.html
+++ b/lines/index.html
@@ -67,7 +67,7 @@
         <div class="pusher">
         <!--**************** Warning message if too many cards are selected ************************** -->
                   <div class="ui hidden red message">
-                        <p>Four Corners only allows 4 flashcards. Doh....!<i class="close icon" id="closeButton"></i></p>
+                        <p>Four Corners only allows 4 flashcards. Doh...!<i class="close icon" id="closeButton"></i></p>
                 </div>
             <!--**************** Flash card view  ************************** -->
             <div class="ui grid">
@@ -82,7 +82,8 @@
                     </div>
                 </div>
                 <!--**************** Option button above canvas the contents comes from the CSS file ************************** -->
-                <div class="four wide column">
+                <!-- CHANGED row line below 30th Jan 2016 Jason fixes right icons creeping left-->
+                <div class="three wide right aligned column">
                     <div id="buttonPull">
                         <div class="ui basic icon compact mini buttons">
                           <button class="ui button format" id="hbuttonClick" ><i id="hbutton" class="resize horizontal icon"></i></button>
