Changed HTML and JS to resize long words
Look for 30th Jan

--- a/disappearingFlashcards/index.html
+++ b/disappearingFlashcards/index.html
@@ -82,7 +82,8 @@
                     </div>
                 </div>
                 <!--**************** Option button above canvas the contents comes from the CSS file ************************** -->
-                <div class="four wide column">
+                <!--UPDATED 30th Jan 2016 Jason Line below to prevent wrapping of Icons-->
+                <div class="three wide right aligned column">
                     <div id="buttonPull">
                         <div class="ui basic icon compact mini buttons">
                           <button class="ui button format active apperance" id="imageToggle"><i class="image icon"></i></button>
