--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Flashcards</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+</head>
+<body>
+<div class="wrapper segment">
+  <header class="main-head segment">Flashcards</header>
+  <article class="content segment">
+  
+    <h1>FLASHCARD GAMES</h1>
+    <div class="games">
+      
+      <a href="https://supertopoz.github.io/flashcardapp/backToTheBoard">
+      <div id="backs-to-the-board" class="card">Backs to the board</div>
+      </a>  
+      <a href="https://supertopoz.github.io/flashcardapp/freeboard">
+      <div id="freeboard" class="card">Freeboard</div>
+      </a>  
+      <a href="https://supertopoz.github.io/flashcardapp/disappearingFlashcards">
+      <div id="disapearing-cards" class="card">Disapearing Cards</div>
+      </a>  
+      <a href="https://supertopoz.github.io/flashcardapp/fourCorners">
+      <div id="four-corners" class="card">Four Corners</div>
+      </a>  
+      <a href="https://supertopoz.github.io/flashcardapp/machineGun">
+      <div id="machine-gun" class="card">Machine Gun</div>
+      </a>  
+      <a href="https://supertopoz.github.io/flashcardapp/lines">
+      <div id="lines" class="card">Lines</div>
+      </a>  
+
+    </div>
+  </article>
+  <footer class="main-footer segment">Copyright - Jason</footer>
+  </div>
+</body>
+</html>
+
