--- a/cardView/index.html
+++ b/cardView/index.html
@@ -56,7 +56,7 @@
 </div>
 <div class="ui bottom attached segment pushable">
   <div class="ui inverted labeled icon left inline vertical sidebar menu">
-    <a class="item">
+    <a href="https://supertopoz.github.io/flashcardapp/" class="item">
       <i class="home icon"></i>
     </a>
     <a class="item">
