--- a/freeboard/index.html
+++ b/freeboard/index.html
@@ -59,7 +59,7 @@
     <div class="ui bottom attached segment pushable">
         <div class=
         "ui inverted labeled icon left inline vertical sidebar menu">
-            <a class="item"><i class="home icon"></i></a> <a class=
+            <a href="https://supertopoz.github.io/flashcardapp/" class="item"><i class="home icon"></i></a> <a class=
             "item"><i class="block layout icon"></i></a> <a class=
             "item"><i class="smile icon"></i></a> <a class="item"><i class=
             "calendar icon"></i></a>
