--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="freeboard" class="card">Freeboard</div>
       </a>  
       <a href="https://supertopoz.github.io/flashcardapp/disappearingFlashcards">
-      <div id="disapearing-cards" class="card">Disapearing Cards</div>
+      <div id="disapearing-cards" class="card">Disappearing Cards</div>
       </a>  
       <a href="https://supertopoz.github.io/flashcardapp/fourCorners">
       <div id="four-corners" class="card">Four Corners</div>
